cylite/yapl.output
Terminals which are not used

   ELIF
   PASS
   TRY
   EXCEPT
   PRINT
   RANGE
   IN
   FOREACH


State 454 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression
   59                      | relational_expression TH_OP shift_expression

   60 equality_expression: relational_expression
   61                    | equality_expression EQ_OP relational_expression
   62                    | equality_expression NE_OP relational_expression

   63 and_expression: equality_expression
   64               | and_expression '&' equality_expression

   65 exclusive_or_expression: and_expression
   66                        | exclusive_or_expression '^' and_expression

   67 inclusive_or_expression: exclusive_or_expression
   68                        | inclusive_or_expression '|' exclusive_or_expression

   69 logical_and_expression: inclusive_or_expression
   70                       | logical_and_expression AND_OP inclusive_or_expression

   71 logical_or_expression: logical_and_expression
   72                      | logical_or_expression OR_OP logical_and_expression

   73 conditional_expression: logical_or_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 init_declarator: declarator '=' initializer
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier: VOID
  114               | CHAR
  115               | SHORT
  116               | INT
  117               | LONG
  118               | FLOAT
  119               | DOUBLE
  120               | SIGNED
  121               | UNSIGNED
  122               | BOOL
  123               | COMPLEX
  124               | IMAGINARY
  125               | atomic_type_specifier
  126               | struct_or_union_specifier
  127               | enum_specifier
  128               | TYPEDEF_NAME

  129 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  130                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list ';'
  137                   | specifier_qualifier_list struct_declarator_list ';'
  138                   | static_assert_declaration

  139 specifier_qualifier_list: type_specifier specifier_qualifier_list
  140                         | type_specifier
  141                         | type_qualifier specifier_qualifier_list
  142                         | type_qualifier

  143 struct_declarator_list: struct_declarator
  144                       | struct_declarator_list ',' struct_declarator

  145 struct_declarator: ':' constant_expression
  146                  | declarator ':' constant_expression
  147                  | declarator

  148 enum_specifier: ENUM '{' enumerator_list '}'
  149               | ENUM '{' enumerator_list ',' '}'
  150               | ENUM IDENTIFIER '{' enumerator_list '}'
  151               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: enumeration_constant '=' constant_expression
  156           | enumeration_constant

  157 atomic_type_specifier: ATOMIC '(' type_name ')'

  158 type_qualifier: CONST
  159               | RESTRICT
  160               | VOLATILE

  161 function_specifier: INLINE
  162                   | NORETURN

  163 alignment_specifier: ALIGNAS '(' type_name ')'
  164                    | ALIGNAS '(' constant_expression ')'

  165 declarator: pointer direct_declarator
  166           | direct_declarator

  167 direct_declarator: IDENTIFIER
  168                  | '(' declarator ')'
  169                  | direct_declarator '[' ']'
  170                  | direct_declarator '[' '*' ']'
  171                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  172                  | direct_declarator '[' STATIC assignment_expression ']'
  173                  | direct_declarator '[' type_qualifier_list '*' ']'
  174                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  175                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list ']'
  177                  | direct_declarator '[' assignment_expression ']'
  178                  | direct_declarator '(' parameter_type_list ')'
  179                  | direct_declarator '(' ')'
  180                  | direct_declarator '(' identifier_list ')'

  181 pointer: '*' type_qualifier_list pointer
  182        | '*' type_qualifier_list
  183        | '*' pointer
  184        | '*'

  185 type_qualifier_list: type_qualifier
  186                    | type_qualifier_list type_qualifier

  187 parameter_type_list: parameter_list ',' ELLIPSIS
  188                    | parameter_list

  189 parameter_list: parameter_declaration
  190               | parameter_list ',' parameter_declaration

  191 parameter_declaration: declaration_specifiers declarator
  192                      | declaration_specifiers abstract_declarator
  193                      | declaration_specifiers

  194 identifier_list: IDENTIFIER
  195                | identifier_list ',' IDENTIFIER

  196 type_name: specifier_qualifier_list abstract_declarator
  197          | specifier_qualifier_list

  198 abstract_declarator: pointer direct_abstract_declarator
  199                    | pointer
  200                    | direct_abstract_declarator

  201 direct_abstract_declarator: '(' abstract_declarator ')'
  202                           | '[' ']'
  203                           | '[' '*' ']'
  204                           | '[' STATIC type_qualifier_list assignment_expression ']'
  205                           | '[' STATIC assignment_expression ']'
  206                           | '[' type_qualifier_list STATIC assignment_expression ']'
  207                           | '[' type_qualifier_list assignment_expression ']'
  208                           | '[' type_qualifier_list ']'
  209                           | '[' assignment_expression ']'
  210                           | direct_abstract_declarator '[' ']'
  211                           | direct_abstract_declarator '[' '*' ']'
  212                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  213                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  214                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  215                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list ']'
  217                           | direct_abstract_declarator '[' assignment_expression ']'
  218                           | '(' ')'
  219                           | '(' parameter_type_list ')'
  220                           | direct_abstract_declarator '(' ')'
  221                           | direct_abstract_declarator '(' parameter_type_list ')'

  222 initializer: '{' initializer_list '}'
  223            | '{' initializer_list ',' '}'
  224            | assignment_expression

  225 initializer_list: designation initializer
  226                 | initializer
  227                 | initializer_list ',' designation initializer
  228                 | initializer_list ',' initializer

  229 designation: designator_list '='

  230 designator_list: designator
  231                | designator_list designator

  232 designator: '[' constant_expression ']'
  233           | '.' IDENTIFIER

  234 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  235 statement: unmatched_statement
  236          | matched_statement

  237 labeled_statement: IDENTIFIER ':' statement
  238                  | CASE constant_expression ':' statement
  239                  | DEFAULT ':' statement

  240 compound_statement: '{' '}'
  241                   | '{' block_item_list '}'

  242 block_item_list: block_item
  243                | block_item_list block_item

  244 block_item: declaration
  245           | statement

  246 expression_statement: ';'
  247                     | expression ';'

  248 matched_statement: labeled_statement
  249                  | compound_statement
  250                  | expression_statement
  251                  | iteration_statement
  252                  | jump_statement
  253                  | SWITCH '(' expression ')' matched_statement
  254                  | IF '(' expression ')' matched_statement ELSE matched_statement

  255 unmatched_statement: IF '(' expression ')' statement
  256                    | IF '(' expression ')' matched_statement ELSE unmatched_statement

  257 iteration_statement: WHILE '(' expression ')' statement
  258                    | DO statement WHILE '(' expression ')' ';'
  259                    | FOR '(' expression_statement expression_statement ')' statement
  260                    | FOR '(' expression_statement expression_statement expression ')' statement
  261                    | FOR '(' declaration expression_statement ')' statement
  262                    | FOR '(' declaration expression_statement expression ')' statement

  263 jump_statement: GOTO IDENTIFIER ';'
  264               | CONTINUE ';'
  265               | BREAK ';'
  266               | RETURN ';'
  267               | RETURN expression ';'

  268 translation_unit: external_declaration
  269                 | translation_unit external_declaration

  270 external_declaration: function_definition
  271                     | declaration

  272 function_definition: declaration_specifiers declarator declaration_list compound_statement
  273                    | declaration_specifiers declarator compound_statement

  274 declaration_list: declaration
  275                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'%' (37) 47
'&' (38) 36 64
'(' (40) 4 12 19 20 25 26 34 35 43 157 163 164 168 178 179 180 201
    218 219 220 221 234 253 254 255 256 257 258 259 260 261 262
')' (41) 4 12 19 20 25 26 34 35 43 157 163 164 168 178 179 180 201
    218 219 220 221 234 253 254 255 256 257 258 259 260 261 262
'*' (42) 37 45 170 173 181 182 183 184 203 211
'+' (43) 38 49
',' (44) 12 14 26 28 88 104 144 149 151 154 187 190 195 223 227 228
    234
'-' (45) 39 50
'.' (46) 21 233
'/' (47) 46
':' (58) 15 16 145 146 237 238 239
';' (59) 90 91 136 137 234 246 247 258 263 264 265 266 267
'<' (60) 55
'=' (61) 76 105 155 229
'>' (62) 56
'[' (91) 18 169 170 171 172 173 174 175 176 177 202 203 204 205 206
    207 208 209 210 211 212 213 214 215 216 217 232
']' (93) 18 169 170 171 172 173 174 175 176 177 202 203 204 205 206
    207 208 209 210 211 212 213 214 215 216 217 232
'^' (94) 66
'{' (123) 25 26 129 130 148 149 150 151 222 223 240 241
'|' (124) 68
'}' (125) 25 26 129 130 148 149 150 151 222 223 240 241
'~' (126) 40
error (256)
ELIF (258)
PASS (259)
TRY (260)
EXCEPT (261)
PRINT (262)
RANGE (263)
IN (264)
FOREACH (265)
IDENTIFIER (266) 1 9 21 22 130 131 150 151 152 167 194 195 233 237
    263
I_CONSTANT (267) 6
F_CONSTANT (268) 7
STRING_LITERAL (269) 10 234
FUNC_NAME (270) 11
SIZEOF (271) 33 34
PTR_OP (272) 22
INC_OP (273) 23 30
DEC_OP (274) 24 31
LEFT_OP (275) 52
RIGHT_OP (276) 53
LE_OP (277) 57
GE_OP (278) 58
EQ_OP (279) 61
NE_OP (280) 62
TH_OP (281) 59
AND_OP (282) 70
OR_OP (283) 72
MUL_ASSIGN (284) 77
DIV_ASSIGN (285) 78
MOD_ASSIGN (286) 79
ADD_ASSIGN (287) 80
SUB_ASSIGN (288) 81
LEFT_ASSIGN (289) 82
RIGHT_ASSIGN (290) 83
AND_ASSIGN (291) 84
XOR_ASSIGN (292) 85
OR_ASSIGN (293) 86
TYPEDEF_NAME (294) 128
ENUMERATION_CONSTANT (295) 8
TYPEDEF (296) 107
EXTERN (297) 108
STATIC (298) 109 171 172 174 204 205 206 212 213 215
AUTO (299) 111
REGISTER (300) 112
INLINE (301) 161
CONST (302) 158
RESTRICT (303) 159
VOLATILE (304) 160
BOOL (305) 122
CHAR (306) 114
SHORT (307) 115
INT (308) 116
LONG (309) 117
SIGNED (310) 120
UNSIGNED (311) 121
FLOAT (312) 118
DOUBLE (313) 119
VOID (314) 113
COMPLEX (315) 123
IMAGINARY (316) 124
STRUCT (317) 132
UNION (318) 133
ENUM (319) 148 149 150 151 152
ELLIPSIS (320) 187
CASE (321) 238
DEFAULT (322) 16 239
IF (323) 254 255 256
ELSE (324) 254 256
SWITCH (325) 253
WHILE (326) 257 258
DO (327) 258
FOR (328) 259 260 261 262
GOTO (329) 263
CONTINUE (330) 264
BREAK (331) 265
RETURN (332) 266 267
ALIGNAS (333) 163 164
ALIGNOF (334) 35
ATOMIC (335) 157
GENERIC (336) 12
NORETURN (337) 162
STATIC_ASSERT (338) 234
THREAD_LOCAL (339) 110


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
primary_expression (109)
    on left: 1 2 3 4 5, on right: 17
constant (110)
    on left: 6 7 8, on right: 2
enumeration_constant (111)
    on left: 9, on right: 155 156
string (112)
    on left: 10 11, on right: 3
generic_selection (113)
    on left: 12, on right: 5
generic_assoc_list (114)
    on left: 13 14, on right: 12 14
generic_association (115)
    on left: 15 16, on right: 13 14
postfix_expression (116)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 18 19 20 21 22
    23 24 29
argument_expression_list (117)
    on left: 27 28, on right: 20 28
unary_expression (118)
    on left: 29 30 31 32 33 34 35, on right: 30 31 33 42 75
unary_operator (119)
    on left: 36 37 38 39 40 41, on right: 32
cast_expression (120)
    on left: 42 43, on right: 32 43 44 45 46 47
multiplicative_expression (121)
    on left: 44 45 46 47, on right: 45 46 47 48 49 50
additive_expression (122)
    on left: 48 49 50, on right: 49 50 51 52 53
shift_expression (123)
    on left: 51 52 53, on right: 52 53 54 55 56 57 58 59
relational_expression (124)
    on left: 54 55 56 57 58 59, on right: 55 56 57 58 59 60 61 62
equality_expression (125)
    on left: 60 61 62, on right: 61 62 63 64
and_expression (126)
    on left: 63 64, on right: 64 65 66
exclusive_or_expression (127)
    on left: 65 66, on right: 66 67 68
inclusive_or_expression (128)
    on left: 67 68, on right: 68 69 70
logical_and_expression (129)
    on left: 69 70, on right: 70 71 72
logical_or_expression (130)
    on left: 71 72, on right: 72 73
conditional_expression (131)
    on left: 73, on right: 74 89
assignment_expression (132)
    on left: 74 75, on right: 12 15 16 27 28 75 87 88 171 172 174 175
    177 204 205 206 207 209 212 213 214 215 217 224
assignment_operator (133)
    on left: 76 77 78 79 80 81 82 83 84 85 86, on right: 75
expression (134)
    on left: 87 88, on right: 4 18 88 247 253 254 255 256 257 258 260
    262 267
constant_expression (135)
    on left: 89, on right: 145 146 155 164 232 234 238
declaration (136)
    on left: 90 91 92, on right: 244 261 262 271 274 275
declaration_specifiers (137)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 90 91 93 95
    97 99 101 191 192 193 272 273
init_declarator_list (138)
    on left: 103 104, on right: 91 104
init_declarator (139)
    on left: 105 106, on right: 103 104
storage_class_specifier (140)
    on left: 107 108 109 110 111 112, on right: 93 94
type_specifier (141)
    on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128, on right: 95 96 139 140
struct_or_union_specifier (142)
    on left: 129 130 131, on right: 126
struct_or_union (143)
    on left: 132 133, on right: 129 130 131
struct_declaration_list (144)
    on left: 134 135, on right: 129 130 135
struct_declaration (145)
    on left: 136 137 138, on right: 134 135
specifier_qualifier_list (146)
    on left: 139 140 141 142, on right: 136 137 139 141 196 197
struct_declarator_list (147)
    on left: 143 144, on right: 137 144
struct_declarator (148)
    on left: 145 146 147, on right: 143 144
enum_specifier (149)
    on left: 148 149 150 151 152, on right: 127
enumerator_list (150)
    on left: 153 154, on right: 148 149 150 151 154
enumerator (151)
    on left: 155 156, on right: 153 154
atomic_type_specifier (152)
    on left: 157, on right: 125
type_qualifier (153)
    on left: 158 159 160, on right: 97 98 141 142 185 186
function_specifier (154)
    on left: 161 162, on right: 99 100
alignment_specifier (155)
    on left: 163 164, on right: 101 102
declarator (156)
    on left: 165 166, on right: 105 106 146 147 168 191 272 273
direct_declarator (157)
    on left: 167 168 169 170 171 172 173 174 175 176 177 178 179 180
   , on right: 165 166 169 170 171 172 173 174 175 176 177 178 179
    180
pointer (158)
    on left: 181 182 183 184, on right: 165 181 183 198 199
type_qualifier_list (159)
    on left: 185 186, on right: 171 173 174 175 176 181 182 186 204
    206 207 208 212 214 215 216
parameter_type_list (160)
    on left: 187 188, on right: 178 219 221
parameter_list (161)
    on left: 189 190, on right: 187 188 190
parameter_declaration (162)
    on left: 191 192 193, on right: 189 190
identifier_list (163)
    on left: 194 195, on right: 180 195
type_name (164)
    on left: 196 197, on right: 15 25 26 34 35 43 157 163
abstract_declarator (165)
    on left: 198 199 200, on right: 192 196 201
direct_abstract_declarator (166)
    on left: 201 202 203 204 205 206 207 208 209 210 211 212 213 214
    215 216 217 218 219 220 221, on right: 198 200 210 211 212 213
    214 215 216 217 220 221
initializer (167)
    on left: 222 223 224, on right: 105 225 226 227 228
initializer_list (168)
    on left: 225 226 227 228, on right: 25 26 222 223 227 228
designation (169)
    on left: 229, on right: 225 227
designator_list (170)
    on left: 230 231, on right: 229 231
designator (171)
    on left: 232 233, on right: 230 231
static_assert_declaration (172)
    on left: 234, on right: 92 138
statement (173)
    on left: 235 236, on right: 237 238 239 245 255 257 258 259 260
    261 262
labeled_statement (174)
    on left: 237 238 239, on right: 248
compound_statement (175)
    on left: 240 241, on right: 249 272 273
block_item_list (176)
    on left: 242 243, on right: 241 243
block_item (177)
    on left: 244 245, on right: 242 243
expression_statement (178)
    on left: 246 247, on right: 250 259 260 261 262
matched_statement (179)
    on left: 248 249 250 251 252 253 254, on right: 236 253 254 256
unmatched_statement (180)
    on left: 255 256, on right: 235 256
iteration_statement (181)
    on left: 257 258 259 260 261 262, on right: 251
jump_statement (182)
    on left: 263 264 265 266 267, on right: 252
translation_unit (183)
    on left: 268 269, on right: 0 269
external_declaration (184)
    on left: 270 271, on right: 268 269
function_definition (185)
    on left: 272 273, on right: 270
declaration_list (186)
    on left: 274 275, on right: 272 275


state 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


state 1

  128 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 128 (type_specifier)


state 2

  107 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 107 (storage_class_specifier)


state 3

  108 storage_class_specifier: EXTERN .

    $default  reduce using rule 108 (storage_class_specifier)


state 4

  109 storage_class_specifier: STATIC .

    $default  reduce using rule 109 (storage_class_specifier)


state 5

  111 storage_class_specifier: AUTO .

    $default  reduce using rule 111 (storage_class_specifier)


state 6

  112 storage_class_specifier: REGISTER .

    $default  reduce using rule 112 (storage_class_specifier)


state 7

  161 function_specifier: INLINE .

    $default  reduce using rule 161 (function_specifier)


state 8

  158 type_qualifier: CONST .

    $default  reduce using rule 158 (type_qualifier)


state 9

  159 type_qualifier: RESTRICT .

    $default  reduce using rule 159 (type_qualifier)


state 10

  160 type_qualifier: VOLATILE .

    $default  reduce using rule 160 (type_qualifier)


state 11

  122 type_specifier: BOOL .

    $default  reduce using rule 122 (type_specifier)


state 12

  114 type_specifier: CHAR .

    $default  reduce using rule 114 (type_specifier)


state 13

  115 type_specifier: SHORT .

    $default  reduce using rule 115 (type_specifier)


state 14

  116 type_specifier: INT .

    $default  reduce using rule 116 (type_specifier)


state 15

  117 type_specifier: LONG .

    $default  reduce using rule 117 (type_specifier)


state 16

  120 type_specifier: SIGNED .

    $default  reduce using rule 120 (type_specifier)


state 17

  121 type_specifier: UNSIGNED .

    $default  reduce using rule 121 (type_specifier)


state 18

  118 type_specifier: FLOAT .

    $default  reduce using rule 118 (type_specifier)


state 19

  119 type_specifier: DOUBLE .

    $default  reduce using rule 119 (type_specifier)


state 20

  113 type_specifier: VOID .

    $default  reduce using rule 113 (type_specifier)


state 21

  123 type_specifier: COMPLEX .

    $default  reduce using rule 123 (type_specifier)


state 22

  124 type_specifier: IMAGINARY .

    $default  reduce using rule 124 (type_specifier)


state 23

  132 struct_or_union: STRUCT .

    $default  reduce using rule 132 (struct_or_union)


state 24

  133 struct_or_union: UNION .

    $default  reduce using rule 133 (struct_or_union)


state 25

  148 enum_specifier: ENUM . '{' enumerator_list '}'
  149               | ENUM . '{' enumerator_list ',' '}'
  150               | ENUM . IDENTIFIER '{' enumerator_list '}'
  151               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


state 26

  163 alignment_specifier: ALIGNAS . '(' type_name ')'
  164                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 48


state 27

  157 atomic_type_specifier: ATOMIC . '(' type_name ')'

    '('  shift, and go to state 49


state 28

  162 function_specifier: NORETURN .

    $default  reduce using rule 162 (function_specifier)


state 29

  234 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


state 30

  110 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 110 (storage_class_specifier)


state 31

  271 external_declaration: declaration .

    $default  reduce using rule 271 (external_declaration)


state 32

   90 declaration: declaration_specifiers . ';'
   91            | declaration_specifiers . init_declarator_list ';'
  272 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  273                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


state 33

   93 declaration_specifiers: storage_class_specifier . declaration_specifiers
   94                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 34

   95 declaration_specifiers: type_specifier . declaration_specifiers
   96                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 35

  126 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 126 (type_specifier)


state 36

  129 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  130                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


state 37

  127 type_specifier: enum_specifier .

    $default  reduce using rule 127 (type_specifier)


state 38

  125 type_specifier: atomic_type_specifier .

    $default  reduce using rule 125 (type_specifier)


state 39

   97 declaration_specifiers: type_qualifier . declaration_specifiers
   98                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 64
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 40

   99 declaration_specifiers: function_specifier . declaration_specifiers
  100                       | function_specifier .
